--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="./mobile-fixes.css?v=1.4.0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitGenius</title>
   </head>
