fix: mobile optimizations and styles

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="./emergency-styles.css?v=3.0.0&t=1748513500" />
-    <link rel="stylesheet" href="./mobile-fixes.css?v=3.0.0&t=1748513500" />
+    <link rel="stylesheet" href="/emergency-styles.css?v=3.0.0&t=1748513500" />
+    <link rel="stylesheet" href="/mobile-fixes.css?v=3.0.0&t=1748513500" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitGenius - Версия 3.0</title>
-    <script src="./emergency-loader.js?v=3.0.0&t=1748513500"></script>
+    <script type="module" src="/emergency-loader.js?v=3.0.0&t=1748513500"></script>
     <style>
       /* Встроенные стили для мобильной оптимизации - версия 3.0 */
       @media (max-width: 768px) {
@@ -31,20 +31,6 @@
           height: 3px !important;
         }
         
-        /* Индикатор версии */
-        body::after {
-          content: "v3.0.0" !important;
-          position: fixed !important;
-          bottom: 10px !important;
-          right: 10px !important;
-          background: #4fd165 !important;
-          color: white !important;
-          padding: 5px 10px !important;
-          border-radius: 20px !important;
-          font-size: 12px !important;
-          z-index: 9999 !important;
-          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2) !important;
-        }
         /* Мобильное меню */
         .mobile-menu {
           width: 85% !important;
@@ -162,6 +148,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="./force-refresh.js?v=1.5.0"></script>
+    <script type="module" src="/force-refresh.js?v=1.5.0"></script>
   </body>
 </html>
