Удалены все упоминания версии 3.0

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="/emergency-styles.css?v=3.0.0&t=1748513500" />
-    <link rel="stylesheet" href="/mobile-fixes.css?v=3.0.0&t=1748513500" />
+    <link rel="stylesheet" href="/emergency-styles.css" />
+    <link rel="stylesheet" href="/mobile-fixes.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FitGenius - Версия 3.0</title>
-    <script type="module" src="/emergency-loader.js?v=3.0.0&t=1748513500"></script>
+    <title>FitGenius</title>
+    <script type="module" src="/emergency-loader.js"></script>
     <style>
-      /* Встроенные стили для мобильной оптимизации - версия 3.0 */
+      /* Встроенные стили для мобильной оптимизации */
       @media (max-width: 768px) {
         /* Мобильное меню */
         .mobile-menu-btn {
@@ -148,6 +148,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script type="module" src="/force-refresh.js?v=1.5.0"></script>
+    <script type="module" src="/force-refresh.js"></script>
   </body>
 </html>
