--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FitGenius</title>
     <script type="module" src="/fitness-planner/emergency-loader.js"></script>
+    <script type="module" src="/fitness-planner/cache-buster.js"></script>
     <style>
       /* Встроенные стили для мобильной оптимизации */
       @media (max-width: 768px) {
